backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-backend
  namespace: nutrition
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-backend
  template:
    metadata:
      labels:
        app: flask-backend
    spec:
      containers:
      - name: flask-backend
        image: shaiva/nutrition-app-backend:latest
        imagePullPolicy: Always
        resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /healthz
            port: 5000
          initialDelaySeconds: 20
          timeoutSeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /readiness
            port: 5000
          initialDelaySeconds: 20
          timeoutSeconds: 5
          periodSeconds: 5
