backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-backend
  namespace: nutrition
spec:
  selector:
    app: flask-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: NodePort
