frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-frontend
  namespace: nutrition
spec:
  selector:
    app: react-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
